fix header z-index

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,6 +6,7 @@
   padding: 0.5rem;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .container h1 {
